The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2046,6 +2046,6 @@
   9.4.4: The resource manager has improved.<br>
   9.4.5: The small changes.<br>
   9.4.6: The image resizer has improved.<br>
-  9.4.7: The small changes.<br></big>
+  9.4.7-9.4.8: The small changes.<br></big>
 </body>
 </html>
