--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -399,11 +399,11 @@
       </tr>
       <tr>
         <td><big>HORIZONTAL_ANIMATED</big></td>
-        <td><big>The horizontal scrolling background or the horizontal strip</big></td>
+        <td><big>The horizontal animated background or the horizontal strip</big></td>
       </tr>
       <tr>
         <td><big>VERTICAL_ANIMATED</big></td>
-        <td><big>The vertical scrolling background or the vertical strip<br></big></td>
+        <td><big>The vertical animated background or the vertical strip<br></big></td>
       </tr>
     </tbody>
   </table>
@@ -412,7 +412,7 @@
   <br>
   A background is a big image</big> <big>with a few frames</big><big>. Any game has a background. The background will be stretched to the screen resolution before rendering the game scene. The background transparency is always disabled.<br>
   <br>
-  The horizontal scrolling backgrounds look like the horizontal photo ribbons. The vertical scrolling backgrounds look like the vertical photo ribbons.<span style="text-decoration: underline;"><br></span></big></p>
+  The horizontal animated backgrounds look like the horizontal photo ribbons. The vertical animated backgrounds look like the vertical photo ribbons.<span style="text-decoration: underline;"><br></span></big></p>
   <p><big><span style="text-decoration: underline;">Work with the background</span><br>
   <br>
   Just use the <span style="font-style: italic;">Background</span> class to work with the background. Let's look at the publicly available methods.<br>
@@ -520,7 +520,8 @@
   A sprite is a transparent image. It is useful for many things: enemies, bonuses, etc.<br></big> <big><br>
   <span style="text-decoration: underline;">Work with the base sprite subsystem</span><br>
   <br>
-  The <span style="font-style: italic;">Billboard</span> class provides simple access to the base sprite subsystem. Don't use it directly. Let's look at the publicly available methods.<br></big> <big><br></big> <big><span style="font-style: italic;">void Billboard::set_transparent(const bool enabled); -</span> Enable or disable the transparent mode.<br>
+  The <span style="font-style: italic;">Billboard</span> class provides simple access to the base sprite subsystem. Don't use it directly. Let's look at the publicly available methods.</big></p>
+  <p><big><span style="font-style: italic;">void Billboard::set_texture_coordinates(const size_t index, const float u, const float v);</span> - Set the texture coordinates.<br></big> <big><br></big> <big><span style="font-style: italic;">void Billboard::set_transparent(const bool enabled); -</span> Enable or disable the transparent mode.<br>
   <br>
   <span style="font-style: italic;">bool Billboard::get_transparent() const; -</span> Return true if the transparent mode is enabled.<br>
   <br></big> <big><span style="font-style: italic;">void Billboard::set_position(const unsigned int x, const unsigned int y); -</span> Set the sprite position.<br>
@@ -2046,6 +2047,7 @@
   9.4.4: The resource manager has improved.<br>
   9.4.5: The small changes.<br>
   9.4.6: The image resizer has improved.<br>
-  9.4.7-9.4.8: The small changes.<br></big>
+  9.4.7-9.4.8: The small changes.<br>
+  9.4.9: The base sprite subsystem has improved.<br></big>
 </body>
 </html>
